--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,11 @@
 body {
   font-family: 'Poppins', sans-serif;
   height: 100vh;
+  position: relative;
+  padding-bottom: 100px;
+  margin-bottom: 100px;
+  color: #000;
+
 }
 
 a {
@@ -33,6 +38,12 @@ h2,
 h3 {
   font-weight: 600;
   margin-bottom: 10px;
+  text-transform: capitalize;
+
+}
+
+h2 {
+  text-transform: capitalize;
 }
 
 .container {
@@ -50,6 +61,10 @@ h3 {
   padding: 20px 0;
   border-bottom: 1px solid #e6e6e6;
   margin-bottom: 60px;
+  background: #ffffff;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  
 }
 
 .header ul {
@@ -60,6 +75,7 @@ h3 {
 
 .header ul li {
   margin-left: 20px;
+  margin-right: 20px;
 }
 
 .header ul li a {
@@ -79,7 +95,7 @@ h3 {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 50px;
-  padding: 0 20px;
+  padding:  20px;
 }
 
 .heading p {
@@ -93,20 +109,29 @@ h3 {
 }
 
 .goal {
-  background-color: #f4f4f4;
+  background-color: #e6e6e6;
   margin: 10px 0;
   padding: 20px 0 10px;
   position: relative;
+  border-radius: 10px;
+
 }
 
-.goal .close {
+ .close {
   position: absolute;
   top: 10px;
   right: 15px;
   cursor: pointer;
   border: none;
   background: none;
+  font-size: 1.1rem;
+  transition: all 0.3s ease;
 }
+
+.user {
+  position : relative;
+}
+
 
 .form,
 .content {
@@ -123,7 +148,7 @@ h3 {
 .form-group select {
   width: 100%;
   padding: 10px;
-  border: 1px solid #e6e6e6;
+  border: 1px solid #828282;
   border-radius: 5px;
   margin-bottom: 10px;
   font-family: inherit;
@@ -149,6 +174,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .btn svg {
@@ -175,18 +201,19 @@ h3 {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.085);
   z-index: 5000;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s ease;
 }
 
 .loadingSpinner {
   width: 64px;
   height: 64px;
   border: 8px solid;
-  border-color: #000 transparent #555 transparent;
+  border-color: #000000 transparent #ff0000 transparent;
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
 }
@@ -212,4 +239,168 @@ h3 {
   .heading p {
     font-size: 1.5rem;
   }
+}
+
+
+.userContainer {
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 0 auto;
+  gap: 10px;
+  background-color: #e5e5e5;
+  padding: 20px;
+  border-radius: 10px;
+
+}
+
+.user {
+  border: #000 2px solid;
+  /* width: 100%; */
+  padding: 20px;
+  border-radius: 12px;
+
+}
+
+.you {
+  background-color: #000;
+  color: #fff;
+  width: min-content;
+  margin: 0 auto;
+  padding: 3px 8px;
+  border-radius: 5px;
+}
+
+.Footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #000;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 5px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar
+{
+	width: 3px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 6px rgb(0, 0, 0);
+	background-color: #000;
+}
+
+.body{
+  padding-bottom: 100px;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.bubble-container {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: -1000;
+}
+
+.bubbles {
+  /* position: relative; */
+  display: flex
+}
+.bbb {
+  position: relative;
+  width: 1.1vw;
+  height: 1.1vw;
+  background: #4fc2dc96;
+  margin: 0 4px;
+  border-radius: 50%;
+  animation: animate 15s linear infinite;
+  animation-duration: calc(520s / var(--i));
+  box-shadow: 
+    0 0 0 10px #4fc3dc44,
+    0 0 50px #4fc2dccc,
+    0 0 100px #4fc2dc9e;
+  z-index: -1000
+  
+}
+
+.red {
+    background: #ff2d76bd;
+    box-shadow: 
+    0 0 0 10px #ff2d7544,
+    0 0 50px #ff2d76a5,
+    0 0 100px #ff2d76a3;
+  
+}
+
+.yellow {
+    background: #e8e237ab;
+    box-shadow: 
+    0 0 0 10px #e8e33744,
+    0 0 50px #e8e237a1,
+    0 0 100px #e8e2378c;
+  
+}
+
+.green {
+    background: #00ff00a1;
+    box-shadow: 
+    0 0 0 10px #00ff0044,
+    0 0 50px #00ff00a1,
+    0 0 100px #00ff008c;
+  
+
+}
+
+@keyframes animate 
+{
+  0% 
+  {
+    transform: translateY(140vh) scale(0);
+  }
+  100% 
+  {
+    transfrorm: translateY(20vh) scale(1);
+  }
+}
+
+.heading {
+  background:#f3f3f3;
+  border-radius: 10px;
+
+}
+
+.close:hover {
+  color: red;
+}
+
+.title {
+  margin-top: 10px;
+  text-decoration: underline solid 2px
+
+}
+
+.logo {
+  padding: 0 20px;
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+
+.loginIcon {
+  margin-top: 10px;
+  padding: 0;
 }
